# lazuli

./: .devcontainer.json  .gitignore  .hlint.yaml  LICENSE.txt  compose.yaml  fly.toml  lazuli.cabal
.github/: dependabot.yaml
.github/workflows/: workflow.yaml
docker/: Dockerfile
docker/devcontainer/: Dockerfile
docker/fly/: Dockerfile
source/executable/: Main.hs
source/test-suite/: Main.hs
