cabal-version: 2.2
name:          lazuli
version:       0.2023.1.26
synopsis:      TODO
description:
  TODO
  TODO

category:      Documentation
license-file:  LICENSE.txt
license:       MIT
maintainer:    Taylor Fausak

source-repository head
  location: https://github.com/tfausak/lazuli
  type:     git

flag pedantic
  manual:  True
  default: False

common library
  build-depends:    base ^>=4.17.0
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-implicit-prelude -Wno-missing-export-lists
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-safe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import:        library
  build-depends: lazuli
  ghc-options:   -rtsopts -threaded

library
  import:          library
  exposed-modules: Lazuli
  hs-source-dirs:  source/library

executable lazuli
  import:         executable
  hs-source-dirs: source/executable
  main-is:        Main.hs
