cabal-version: 2.2
name:          lazuli
version:       0.2023.1.26
synopsis:      TODO
description:
  TODO
  TODO

category:      Documentation
license-file:  LICENSE.txt
license:       MIT
maintainer:    Taylor Fausak

source-repository head
  location: https://github.com/tfausak/lazuli
  type:     git

flag pedantic
  manual:  True
  default: False

common library
  build-depends:    base ^>=4.17.0
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-kind-signatures -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import:        library
  build-depends: lazuli
  ghc-options:   -rtsopts -threaded

library
  import:             library
  autogen-modules:    Paths_lazuli
  build-depends:
    , bytestring ^>=0.11.4
    , exceptions ^>=0.10.7
    , hspec ^>=2.10.8
    , http-types ^>=0.12.3
    , lucid2 ^>=0.0.20221012
    , random ^>=1.2.1
    , text ^>=2.0.1
    , vault ^>=0.3.1
    , wai ^>=3.2.3
    , warp ^>=3.3.23

  default-extensions:
    DerivingVia
    OverloadedStrings

  exposed-modules:
    Lazuli
    Lazuli.Constant.Header
    Lazuli.Constant.Version
    Lazuli.Exception.InvalidOption
    Lazuli.Exception.UnexpectedArgument
    Lazuli.Exception.UnknownOption
    Lazuli.Main.Executable
    Lazuli.Main.TestSuite
    Lazuli.Type.Config
    Lazuli.Type.Flag
    Lazuli.Type.RequestId

  hs-source-dirs:     source/library
  other-modules:
    Lazuli.Type.ConfigSpec
    LazuliSpec
    Paths_lazuli

executable lazuli
  import:         executable
  hs-source-dirs: source/executable
  main-is:        Main.hs

test-suite lazuli-test-suite
  import:         executable
  hs-source-dirs: source/test-suite
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
