cabal-version: 2.2
name:          lazuli
version:       0.2023.1.30
synopsis:      TODO
description:
  TODO
  TODO

category:      Documentation
data-dir:      data
data-files:
  bootstrap.css
  favicon.ico

license-file:  LICENSE.txt
license:       MIT
maintainer:    Taylor Fausak

source-repository head
  location: https://github.com/tfausak/lazuli
  type:     git

flag pedantic
  manual:  True
  default: False

common library
  build-depends:    base ^>=4.17.0
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-implicit-prelude
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-kind-signatures -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module -Wno-safe -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import:        library
  build-depends: lazuli
  ghc-options:   -rtsopts -threaded

library
  import:             library
  autogen-modules:    Paths_lazuli
  build-depends:
    , aeson ^>=2.1.1
    , bytestring ^>=0.11.4
    , containers ^>=0.6.6
    , exceptions ^>=0.10.7
    , filepath ^>=1.4.2
    , hspec ^>=2.10.8
    , http-client ^>=0.7.13
    , http-client-tls ^>=0.3.6
    , http-types ^>=0.12.3
    , lucid2 ^>=0.0.20221012
    , network-uri ^>=2.6.4
    , patrol ^>=1.0.0
    , random ^>=1.2.1
    , text ^>=2.0.1
    , time ^>=1.12.2
    , vault ^>=0.3.1
    , wai ^>=3.2.3
    , wai-extra ^>=3.1.13
    , warp ^>=3.3.23
    , witch ^>=1.1.6

  default-extensions:
    ApplicativeDo
    DerivingVia
    FlexibleInstances
    MultiParamTypeClasses
    OverloadedStrings
    TypeApplications

  exposed-modules:
    Lazuli
    Lazuli.Action.Config.Load
    Lazuli.Action.Context.Load
    Lazuli.Action.Exception.Handle
    Lazuli.Constant.Header
    Lazuli.Constant.Mime
    Lazuli.Constant.Version
    Lazuli.Exception.InvalidOption
    Lazuli.Exception.TestError
    Lazuli.Exception.UnexpectedArgument
    Lazuli.Exception.UnknownOption
    Lazuli.Extra.Either
    Lazuli.Extra.GetOpt
    Lazuli.Extra.Hspec
    Lazuli.Extra.List
    Lazuli.Extra.Wai
    Lazuli.Log
    Lazuli.Main.Executable
    Lazuli.Main.TestSuite
    Lazuli.Middleware.AddRequestId
    Lazuli.Middleware.AddSecurityHeaders
    Lazuli.Middleware.HandleExceptions
    Lazuli.Middleware.LogResponses
    Lazuli.Server.Application
    Lazuli.Server.Middleware
    Lazuli.Type.Config
    Lazuli.Type.Context
    Lazuli.Type.Environment
    Lazuli.Type.Flag
    Lazuli.Type.LogLevel
    Lazuli.Type.Port
    Lazuli.Type.RequestId
    Lazuli.Type.Url

  hs-source-dirs:     source/library
  other-modules:
    Lazuli.Action.Config.LoadSpec
    Lazuli.Action.Context.LoadSpec
    Lazuli.Action.Exception.HandleSpec
    Lazuli.Extra.EitherSpec
    Lazuli.Extra.GetOptSpec
    Lazuli.Extra.HspecSpec
    Lazuli.Extra.ListSpec
    Lazuli.Middleware.AddRequestIdSpec
    Lazuli.Middleware.AddSecurityHeadersSpec
    Lazuli.Middleware.HandleExceptionsSpec
    Lazuli.Middleware.LogResponsesSpec
    Lazuli.Type.ConfigSpec
    Lazuli.Type.EnvironmentSpec
    Lazuli.Type.LogLevelSpec
    Lazuli.Type.PortSpec
    Lazuli.Type.RequestIdSpec
    Lazuli.Type.UrlSpec
    LazuliSpec
    Paths_lazuli

executable lazuli
  import:         executable
  hs-source-dirs: source/executable
  main-is:        Main.hs

test-suite lazuli-test-suite
  import:         executable
  hs-source-dirs: source/test-suite
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
